--- a/css/components.css
+++ b/css/components.css
@@ -198,6 +198,7 @@
 .filter-chips {
   display: flex;
   gap: var(--space-md);
+  align-items: center;
 }
 
 .chip {
@@ -254,6 +255,7 @@
 /* Chart Components */
 .chart-container {
   position: relative;
+  width: 100%;
 }
 
 .chart-y-axis {
@@ -283,6 +285,7 @@
 .chart-svg {
   width: 100%;
   height: 240px;
+  display: block;
 }
 
 .chart-highlight-pill {
